upgrade to 11ty 3.0.0 and change a bunch of other stuff

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -1,62 +1,61 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="manifest" href="/manifest.json">
-  <meta name="theme-color" content="{{ siteData.themeColor }}">
-  {% for font in siteData.coreFonts %}
-    <link rel="preload" as="font" href="{{ font }}" type="font/woff2" crossorigin>
-  {% endfor %}
-  {% set pageTitle = "Alex Dueppen: " + (title or eleventyNavigation.key) %}
-  {% metagen
-    title=pageTitle,
-    desc=description,
-    url=siteData.url + page.url,
-    img=siteData.url + (thumb.url or "/images/icons/icon-512x512.png"),
-    img_alt=(thumb.alt or "Alex Dueppen logo"),
-    twitter_card_type=card_type,
-    twitter_handle=siteData.links.twitter.username,
-    name="Alex Dueppen" %}
-  <title>{{ pageTitle }}</title>
-  <link rel="stylesheet" href="/styles/index.css">
-  {% for stylesheet in extraStyles -%}
-    <link rel="stylesheet" href="{{ stylesheet }}">
-  {% endfor %}
+	<link rel="shortcut icon" href="/favicon.ico">
+	<link rel="manifest" href="/manifest.json">
+	<meta name="theme-color" content="{{ siteData.themeColor }}">
+	{% for font in siteData.coreFonts %}
+		<link rel="preload" as="font" href="{{ font }}" type="font/woff2" crossorigin>
+	{% endfor %}
+	{% set pageTitle = "Alex Dueppen: " + (title or eleventyNavigation.key) %}
+	{% metagen
+		title=pageTitle,
+		desc=description,
+		url=siteData.url + page.url,
+		img=siteData.url + (thumb.url or "/images/icons/icon-512x512.png"),
+		img_alt=(thumb.alt or "Alex Dueppen logo"),
+		generator=eleventy.generator,
+		twitter_card_type=card_type,
+		twitter_handle=siteData.links.twitter.username,
+		name="Alex Dueppen" %}
+	<link rel="stylesheet" href="/styles/index.css">
+	{% for stylesheet in extraStyles -%}
+		<link rel="stylesheet" href="{{ stylesheet }}">
+	{% endfor %}
 </head>
-<body class="preload" itemscope itemtype="http://schema.org/WebPage">
-  <header>
-    <nav>
-      {%- set navPages = collections.all | eleventyNavigation %}
-      <ul>
-        {%- for entry in navPages %}
-          {%- set active = (entry.key == eleventyNavigation.key or entry.key == eleventyNavigation.parent) %}
-          <li class="navItem{% if active %} navItemActive{% endif %}">
-            <a href="{{ entry.url }}" class="alwaysAnimate">{{ entry.key }}</a>
-          </li>
-        {%- endfor %}
-      </ul>
-    </nav>
-  </header>
-  <main>{{ content | safe }}</main>
-  <footer>
-    <div class="footerContent">
-      <div class="themeSelect requiresJS" aria-label="Theme selection">
-        {%- for theme in ["light", "dark", "black"] %}
-          <label>
-            <input type="radio" name="theme" value="{{ theme }}" onclick="setTheme('{{ theme }}')">
-            {{ theme | capitalize }}
-          </label>
-        {%- endfor %}
-      </div>
-      <div class="source">
-        <a href="{{ siteData.repoLink }}" target="_blank" rel="noopener">Website Source Code</a>
-      </div>
-    </div>
-  </footer>
-  <div class="requiresJS" id="newContent" onclick="window.location.reload();">
-    <p>This site has been updated. Click here or reload the page to update.</p>
-  </div>
-  <script src="/scripts/index.js"></script>
+<body class="preload">
+<header>
+	<nav>
+		{%- set navPages = collections.all | eleventyNavigation %}
+		<ul>
+			{%- for entry in navPages %}
+				{%- set active = (entry.key == eleventyNavigation.key or entry.key == eleventyNavigation.parent) %}
+				<li class="navItem{% if active %} navItemActive{% endif %}">
+					<a href="{{ entry.url }}" class="alwaysAnimate">{{ entry.key }}</a>
+				</li>
+			{%- endfor %}
+		</ul>
+	</nav>
+</header>
+<main>{{ content | safe }}</main>
+<footer>
+	<div class="footerContent">
+		<div class="themeSelect requiresJS" aria-label="Theme selection">
+			{%- for theme in ["light", "dark", "black"] %}
+				<label>
+					<input type="radio" name="theme" value="{{ theme }}" onclick="setTheme('{{ theme }}')">
+					{{ theme | capitalize }}
+				</label>
+			{%- endfor %}
+		</div>
+		<div class="source">
+			<a href="{{ siteData.repoLink }}" target="_blank" rel="noopener">Website Source Code</a>
+		</div>
+	</div>
+</footer>
+<div class="requiresJS" id="newContent" onclick="window.location.reload();">
+	<p>This site has been updated. Click here or reload the page to update.</p>
+</div>
+<script src="/scripts/index.js"></script>
 </body>
 </html>
